Remove leading offset from the omnibox textfield

The omnibox textfield moves its text content area to account for the
leftView; however the leftView is now replaced with leadingButton in
the LocationBarView, so the leading offset should not be adjusted on
the textfield level.
This CL makes LocationBarView inset the textfield from the leading side
as necessary, and makes the textfield always align the text area to the
leading edge.

Bug: 791630
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I28ccb76eef95d0b50f24ff3ca3b437e03efce8cb
Reviewed-on: https://chromium-review.googlesource.com/818342
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523461}
Former-commit-id: 20dbdbbfa6343f1464d5b068a92d5714e05a5e73