ios/chrome/browser/ui/omnibox/location_bar_view.mm
@@ -23,6 +23,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace {
 const CGFloat kLeadingButtonEdgeOffset = 9;
+// Offset from the leading edge to the textfield when no image is shown.
+const CGFloat kTextFieldLeadingOffsetNoImage = 16;
+// Space between the leading button and the textfield when a button is shown.
+const CGFloat kTextFieldLeadingOffsetImage = 6;
 }  // namespace
 
 @interface OmniboxTextFieldIOS ()
@@ -97,8 +101,9 @@ const CGFloat kLeadingButtonEdgeOffset = 9;
                                                   tintColor:tintColor];
     [self addSubview:_textField];
 
-    _leadingTextfieldConstraint =
-        [_textField.leadingAnchor constraintEqualToAnchor:self.leadingAnchor];
+    _leadingTextfieldConstraint = [_textField.leadingAnchor
+        constraintEqualToAnchor:self.leadingAnchor
+                       constant:kTextFieldLeadingOffsetNoImage];
 
     [NSLayoutConstraint activateConstraints:@[
       [_textField.trailingAnchor constraintEqualToAnchor:self.trailingAnchor],
@@ -130,7 +135,8 @@ const CGFloat kLeadingButtonEdgeOffset = 9;
       [_leadingButton.centerYAnchor constraintEqualToAnchor:self.centerYAnchor],
       self.leadingButtonLeadingConstraint,
       [self.leadingButton.trailingAnchor
-          constraintEqualToAnchor:self.textField.leadingAnchor],
+          constraintEqualToAnchor:self.textField.leadingAnchor
+                         constant:-kTextFieldLeadingOffsetImage],
     ]];
   }
 }
