ios/chrome/browser/ui/toolbar/toolbar_egtest.mm
@@ -277,7 +277,8 @@ void SelectNewTabPagePanel(ntp_home::PanelIdentifier panel_type) {
   }];
 
   std::map<GURL, std::string> responses;
-  const GURL URL = web::test::HttpServer::MakeUrl("http://testPage");
+  // The URL needs to be long enough so the tap to the omnibox selects it.
+  const GURL URL = web::test::HttpServer::MakeUrl("http://veryLongURLTestPage");
   const GURL secondURL = web::test::HttpServer::MakeUrl("http://pastePage");
 
   [ChromeEarlGrey loadURL:URL];
@@ -291,7 +292,10 @@ void SelectNewTabPagePanel(ntp_home::PanelIdentifier panel_type) {
     [[EarlGrey selectElementWithMatcher:chrome_test_util::Omnibox()]
         performAction:grey_tap()];
     // Tap twice to get the pre-edit label callout bar copy button.
-    [[EarlGrey selectElementWithMatcher:chrome_test_util::Omnibox()]
+    [[EarlGrey
+        selectElementWithMatcher:grey_allOf(
+                                     grey_ancestor(chrome_test_util::Omnibox()),
+                                     grey_kindOfClass([UILabel class]), nil)]
         performAction:grey_tap()];
 
     [[[EarlGrey selectElementWithMatcher:grey_accessibilityLabel(@"Copy")]
